@@ -103,15 +103,6 @@
  	(if (not (is-visible? (get-top-card start-slot)))
 	    (flip-top-card start-slot)))))
 
-; 	(let ((top-card (remove-card 10)))
-; 	  (if (eq? top-card '())
-; 	      #f
-; 	      (add-card! start-slot top-card)))
-; 	(if (not (is-visible? (get-top-card start-slot)))
-; 	    (flip-top-card start-slot))
-; 	(if (= (list-length (get-cards 10)) 1)
-;	    (flip-top-card 10)))))
-
 (define (button-released start-slot card-list end-slot)
   (if (or (= start-slot end-slot)
 	  (and (> (list-length card-list) 1)
@@ -187,13 +178,21 @@
 	       (and (> slot 10))))
       (cond ((and (= BASE-VAL (get-value (get-top-card slot))))
 	     (cond ((empty-slot? 2)
-		    (deal-cards slot '(2)))
+		    (begin
+		      (deal-cards slot '(2))
+		      (add-to-score! 1)))
 		   ((empty-slot? 3)
-		    (deal-cards slot '(3)))
+		    (begin
+		      (deal-cards slot '(3))
+		      (add-to-score! 1)))
 		   ((empty-slot? 4)
-		    (deal-cards slot '(4)))
+		    (begin
+		      (deal-cards slot '(4))
+		      (add-to-score! 1)))
 		   (#t
-		    (deal-cards slot '(5)))))
+		    (begin 
+		      (deal-cards slot '(5))
+		      (add-to-score! 1)))))
 	    ((and (not (empty-slot? 2))
 		  (= (get-suit (get-top-card slot))
 		     (get-suit (get-top-card 2))))
@@ -201,7 +200,9 @@
 			  (= (get-value (get-top-card 2)) king))
 		     (= (get-value (get-top-card slot))
 			(+ 1 (get-value (get-top-card 2)))))
-		 (deal-cards slot '(2))
+		 (begin
+		   (deal-cards slot '(2))
+		   (add-to-score! 1))
 		 #f))
 	    ((and (not (empty-slot? 3))
 		  (= (get-suit (get-top-card slot))
@@ -210,7 +211,9 @@
 			  (= (get-value (get-top-card 3)) king))
 		     (= (get-value (get-top-card slot))
 			(+ 1 (get-value (get-top-card 3)))))
-		 (deal-cards slot '(3))
+		 (begin
+		   (deal-cards slot '(3))
+		   (add-to-score! 1))
 		 #f))
 	    ((and (not (empty-slot? 4))
 		  (= (get-suit (get-top-card slot))
@@ -219,7 +222,9 @@
 			  (= (get-value (get-top-card 4)) king))
 		     (= (get-value (get-top-card slot))
 			(+ 1 (get-value (get-top-card 4)))))
-		 (deal-cards slot '(4))
+		 (begin
+		   (deal-cards slot '(4))
+		   (add-to-score! 1))
 		 #f))
 	    ((and (not (empty-slot? 5))
 		  (= (get-suit (get-top-card slot))
@@ -228,7 +233,9 @@
 			  (= (get-value (get-top-card 5)) king))
 		     (= (get-value (get-top-card slot))
 			(+ 1 (get-value (get-top-card 5)))))
-		 (deal-cards slot '(5))
+		 (begin
+		   (deal-cards slot '(5))
+		   (add-to-score! 1))
 		 #f))
 	    (#t #f))
       #f)
@@ -254,13 +261,15 @@
 	      ((= slot 14)
 	       (deal-cards 10 '(14)))
 	      (#t #t))
+	(if (and (not (empty-slot? 10))
+		 (= (list-length (get-cards 10)) 1))
+	    (flip-top-card 10))
 	(if (not (is-visible? (get-top-card slot)))
 	    (flip-top-card slot)))))
-	      
-	    
 
 (define (game-over borp)
-  (not (game-won borp)))
+  (and (not (game-won borp))
+       (get-hint borp)))
 
 (define (game-won borp)
   (and (empty-slot? 0)
@@ -275,7 +284,103 @@
        (empty-slot? 13)
        (empty-slot? 14)))
 
+(define (check-a-foundation slot1 slot2)
+  (and (not (empty-slot? slot2))
+       (= (get-suit (get-top-card slot1))
+	  (get-suit (get-top-card slot2)))
+       (or (= (get-value (get-top-card slot1))
+	      (+ 1 (get-value (get-top-card slot2))))
+	   (and (= (get-value (get-top-card slot1)) ace)
+		(= (get-value (get-top-card slot2)) king)))))
+
+(define (check-to-foundation slot)
+  (if (and (not (empty-slot? slot))
+	   (is-visible? (get-top-card slot)))
+      (cond ((= (get-value (get-top-card slot)) BASE-VAL)
+	     (list 3 (get-name (get-top-card slot)) "to an empty foundation"))
+	    ((check-a-foundation slot 2)
+	     (list 1 
+		   (get-name (get-top-card slot)) 
+		   (get-name (get-top-card 2))))
+	    ((check-a-foundation slot 3)
+	     (list 1 
+		   (get-name (get-top-card slot)) 
+		   (get-name (get-top-card 3))))
+	    ((check-a-foundation slot 4)
+	     (list 1 
+		   (get-name (get-top-card slot)) 
+		   (get-name (get-top-card 4))))
+	    ((check-a-foundation slot 5)
+	     (list 1 
+		   (get-name (get-top-card slot)) 
+		   (get-name (get-top-card 5))))
+	    ((= slot 1)
+	     (check-to-foundation 6))
+	    ((< slot 14)
+	     (check-to-foundation (+ 1 slot)))
+	    (#t #f))
+      (if (= slot 1)
+	  (check-to-foundation 6)
+	  (if (< slot 14)
+	      (check-to-foundation (+ 1 slot))
+	      #f))))
+
+(define (check-empty-slot slot)
+  (if (and (empty-slot? slot)
+	   (not (= slot 10)))
+      (if (empty-slot? 1)
+	  #f
+	  (list 2 (get-name (get-top-card 1)) "an empty slot on tableau"))
+      (if (< slot 14)
+	  (check-empty-slot (+ 1 slot))
+	  #f)))
+
+(define (check-to-tableau slot card check-slot)
+  (if (and (not (= slot check-slot))
+	   (not (= check-slot 10))
+	   (not (empty-slot? check-slot))
+	   (< (list-length (get-cards check-slot)) 3)
+	   (= (get-suit card)
+	      (get-suit (get-top-card check-slot)))
+	   (or (= (+ 1 (get-value card))
+		  (get-value (get-top-card check-slot)))
+	       (and (= (get-value card) king)
+		    (= (get-value (get-top-card check-slot)) ace))))
+      (list 1 (get-name card) (get-name (get-top-card check-slot)))
+      (if (< check-slot 14)
+	  (check-to-tableau slot card (+ 1 check-slot))
+	  #f)))
+
+(define (check-tableau slot)
+  (if (and (not (empty-slot? slot))
+	   (or (= slot 1)
+	       (and (> slot 5)
+		    (is-visible? (get-top-card slot))
+		    (= 1 (list-length (get-cards slot))))))
+      (check-to-tableau slot (get-top-card slot) 6)
+      #f))
+
+(define (dealable? borp)
+  (if (not (empty-slot? 0))
+      (list 0 "Deal a card")
+      (if (and (not (empty-slot? 1))
+	       (< FLIP-COUNTER 2))
+	  (list 0 "Move waste back to stock")
+	  #f)))
+
 (define (get-hint borp)
-  #f)
+  (or (check-to-foundation 1)
+      (check-empty-slot 6)
+      (check-tableau 1)
+      (check-tableau 6)
+      (check-tableau 7)
+      (check-tableau 8)
+      (check-tableau 9)
+      (check-tableau 10)
+      (check-tableau 11)
+      (check-tableau 12)
+      (check-tableau 13)
+      (check-tableau 14)
+      (dealable? borp)))
 
 (set-lambda new-game button-pressed button-released button-clicked button-double-clicked game-over game-won get-hint)
