@@ -1,6 +1,11 @@
 1998-10-23  Rosanna Yuen  <rwsy@mit.edu>
 
-	* eagle_wing.scm (button-double-clicked): added ouble click support
+	* eagle_wing.scm (get-hint): added hint support (and use it to do
+	game-over)
+
+1998-10-23  Rosanna Yuen  <rwsy@mit.edu>
+
+	* eagle_wing.scm (button-double-clicked): added double click support
 
 1998-10-21  Rosanna Yuen  <rwsy@mit.edu>
 
